# Qt-Project---MusicPlayer

./: .gitignore  CMakeLists.txt  README.md  lrcparser.cpp  lrcparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  marqueelabel.cpp  marqueelabel.h  mediaplayerpool.cpp  mediaplayerpool.h  moremenu.cpp  moremenu.h  moremenu.ui  musicplaylist.cpp  musicplaylist.h  musicplaylist.ui  playercontroller.cpp  playercontroller.h  playliststore.cpp  playliststore.h  res.qrc  songunit.cpp  songunit.h  songunit.ui  style.qss
build_cursor_check/: CMakeCache.txt  cmake_install.cmake
